# crome-cgg

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conda-dependencies.yml  duties.py  entrypoint.sh  environment-cgg.yml  environment-mac.yml  environment.yml  mkdocs.yml  pyproject.toml  run-pre-commit.sh  run.sh  setup.cfg
case_studies/legacy/: nemo.txt  spec_good.txt  spec_run.txt
case_studies/minimal/: small_example.py
case_studies/minimal/world/: world_top.py
case_studies/repair/: candidate_composition.py  cgg.py  goals.py  repair.py  repair2.py  score.py  world.py
case_studies/robocup/: 0_modeling_goals.py  1_analysis_build_cgg.py  2_synthesis_realize_controllers.py  __init__.py  case_study_1.py  from_file.py  from_goals.py  goals_clean_up.py  goals_patrolling_refinement2.py  modeling_environment.py  small_example.py
case_studies/robocup/output/: doors2.txt  simulation.txt  spec.txt  spec_1.txt  spec_ok.txt  spec_test.txt
case_studies/robocup/output/ref/clean/: run.txt
case_studies/robocup/refined/: alexa.py  clean.py
case_studies/robocup/top/: spec.py
case_studies/robocup/variables/: __init__.py  actions.py  context.py  locations.py  sensors.py
case_studies/robocup/world/: world_ref.py
case_studies/slugs_examples/: convert.py  example.ltl  example_g.txt  findwaldo_g.ltl  firefighting.ltl  firefighting_g.ltl  parse.py
config/: mypy.ini
crome_cgg/: __init__.py
crome_cgg/case_studies/legacy/: doors_brokjen.txt  spec_name_run.txt
crome_cgg/case_studies/minimal/: not_working.py  small_example.py
crome_cgg/case_studies/minimal/world/: world_ref.py  world_top.py
crome_cgg/case_studies/repair/: candidate_composition.py  cgg.py  goals.py  repair.py  repair2.py  score.py  world.py
crome_cgg/case_studies/robocup/: case_study_1.py  goals_patrolling_refinement.py  goals_patrolling_refinement2.py  small_example.py
crome_cgg/case_studies/robocup/output/ref/clean/: spec.txt
crome_cgg/case_studies/robocup/output/ref/groce/: spec.txt
crome_cgg/case_studies/robocup/refined/: clean.py  grocieries.py  patrol.py
crome_cgg/case_studies/robocup/top/: spec.py
crome_cgg/case_studies/robocup/world/: world_ref.py  world_top.py
crome_cgg/case_studies/slugs_examples/: convert.py  example_g.ltl  parse.py  rescue_g.ltl
crome_cgg/cgg/: __init__.py  context_based_clustering.py  exceptions.py
crome_cgg/context/: __init__.py  exceptions.py
crome_cgg/examples/: gridworld.py  persistence.py
crome_cgg/goal/: __init__.py  exceptions.py
crome_cgg/goal/operations/: _shared.py  composition.py  conjunction.py  merging.py  quotient.py  refinement.py  separation.py
crome_cgg/rule/: __init__.py
crome_cgg/shared/: objects.py  paths.py
crome_cgg/tools/: names.py  persistence.py  strings.py
crome_cgg/world/: __init__.py
docs/: conf.py
docs/_templates/: badges.html  github.html  moreinfo.html
examples/: gridworld.py  persistence.py
examples/contextual_gridworld/: __init__.py  _run_all_steps.py  modeling_goals.py  modeling_world.py
scripts/: gen_credits.py  multirun.sh  setup.sh
src/case_studies/legacy/: top.txt  top_run.txt
src/case_studies/minimal/: not_working.py  small_example.py
src/case_studies/minimal/world/: world_ref.py  world_top.py
src/case_studies/repair/: candidate_composition.py  cgg.py  goals.py  repair.py  repair2.py  score.py  world.py
src/case_studies/robocup/: case_study_1.py  goals_patrolling_refinement.py  goals_patrolling_refinement2.py  small_example.py
src/case_studies/robocup/output/: synthetize.py
src/case_studies/robocup/refined/: alexa.py  clean.py  serve.py
src/case_studies/robocup/top/: spec.py
src/case_studies/robocup/world/: world_ref.py  world_top.py
src/case_studies/slugs_examples/: convert.py  findwaldo.ltl  findwaldo_a.ltl  grocery.ltl  grocery_a.ltl  grocery_g.ltl  parse.py  rescue.ltl
src/crome_cgg/: __init__.py  __main__.py  cli.py
src/crome_cgg/cgg/: __init__.py  context_based_clustering.py  exceptions.py
src/crome_cgg/context/: __init__.py
src/crome_cgg/goal/: __init__.py  exceptions.py
src/crome_cgg/goal/operations/: _shared.py  composition.py  conjunction.py  merging.py  quotient.py  refinement.py  separation.py
src/crome_cgg/shared/: objects.py  paths.py
src/crome_cgg/tools/: persistence.py
src/examples/: gridworld.py  persistence.py
src/tools/: crome_io.py  strings.py
tests/: __init__.py  test_cli.py
tests/test_example/: some_function_test.py
tools/: crome_io.py  strings.py
