[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "crome-cgg"
description = "LTL and Boolean formulas manipulation"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/pierg/crome-cgg"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
crome-logic = {path = "../crome-logic", develop = true}
isort = "^5.10.1"
docformatter = "^1.4"
black = "^22.1.0"
pyupgrade = "^2.31.0"
pycln = "^1.1.0"
autoflake = "^1.4"
autopep8 = "^1.6.0"
yapf = "^0.32.0"
oitnb = "^0.2.2"
flake8-quotes = "^3.3.1"
bandit = "^1.7.2"
mypy = "^0.931"

[tool.poetry.dev-dependencies]

wemake-python-styleguide = "^0.16"
flake8-pytest-style = "^1.6"
nitpick = "^0.31"

safety = "^1.10"

pytest = "^6.2"
pytest-cov = "^3.0"
pytest-randomly = "^3.11"

sphinx = "^4.4"
sphinx-autodoc-typehints = "^1.16"
doc8 = "^0.10"
m2r2 = "^0.3"
tomlkit = "^0.8"
