[project]
name = "crome-cgg"
version = ""
description = "Contract algebra implementation in LTL"
authors = [
    {name = "Piergiuseppe Mallozzi", email = "piergiuseppe.mallozzi@gmail.com"},
]
dependencies = [
    "editables>=0.3",
    "crome-contracts @ file:///${PROJECT_ROOT}/crome_contracts",
    "crome-logic @ file:///${PROJECT_ROOT}/crome_logic",
    "crome-synthesis @ file:///${PROJECT_ROOT}/crome_synthesis",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}

[project.scripts]
example = "crome_cgg.cli:main"

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.7"]
docs = [
    "mkdocs>=1.3",
    "mkdocs-coverage>=0.2",
    "mkdocs-gen-files>=0.3",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-material>=7.3",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.18",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "toml>=0.10",
]
format = [
    "autoflake>=1.4",
    "black>=21.10b0",
    "isort>=5.10",
]
maintain = [
    "git-changelog>=0.4",
]
quality = [
    "darglint>=1.8",
    "flake8-bandit>=2.1",
    "flake8-black>=0.2",
    "flake8-bugbear>=21.9",
    "flake8-builtins>=1.5",
    "flake8-comprehensions>=3.7",
    "flake8-docstrings>=1.6",
    "flake8-pytest-style>=1.5",
    "flake8-string-format>=0.3",
    "flake8-tidy-imports>=4.5",
    "flake8-variables-names>=0.0",
    "pep8-naming>=0.12",
    "wps-light>=0.15",
]
tests = [
    "pytest>=6.2",
    "pytest-cov>=3.0",
    "pytest-randomly>=3.10",
    "pytest-xdist>=2.4",
]
typing = [
    "mypy>=0.910",
    "types-markdown>=3.3",
    "types-toml>=0.10",
]
security = ["safety>=1.10"]
dev = [
    "pre-commit>=2.20.0",
    "pylint>=2.15.0",
]

[tool]
[tool.pdm]
